--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mvcexpress",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto IoT Tec 2024",
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
